# MATE

./: .gitignore  .gitmodules  AGENTS.md  README.md  pyproject.toml
artifacts/: real_validation.html  real_validation.json  real_validation_realmode.html  real_validation_realmode.json  real_validation_realmode_full.html  real_validation_realmode_full.json  search_mas_real_nosearch.yaml  trajectory_real_validation.json  trajectory_validation_exact_match.json  trajectory_validation_real_fixed.json  trajectory_validation_real_smoke_fixed.json
docs/: codebase-cheatsheet.md  project-context.md  rfc-agent-trajectory-gateway copy.md  rfc-agent-trajectory-gateway.md
docs/plans/: 2026-03-02-marl-grpo-design.md  2026-03-02-marl-grpo-v0-directions.md  2026-03-04-trajectory-engine-v0-design.md  2026-03-04-trajectory-engine-v0-impl-plan.md  2026-03-05-training-integration-spec.md  2026-03-09-trajectory-engine-v02-design-direction.md  2026-03-09-trajectory-engine-v02-impl-plan.md  2026-03-11-doc-cleanup-and-script-slimming-plan.md  2026-03-11-trajectory-public-api-boundary.md  2026-03-13-tokenization-drift-analysis.md  2026-03-16-bgrpo-v03-design.md  2026-03-16-bgrpo-v03-impl-plan.md  2026-03-17-bgrpo-v03-implementation-plan.md  2026-03-17-bgrpo-v03-runtime-contract-design.md  (+3 more)
scripts/: USAGE.md  _trajectory_utils.py  demo_search_mas.py  run_real_validation.py  run_tree_validation.py  visualize_trajectories.py
skills/: README.md  document-entry-hygiene.md  retro-to-agents-rules.md  skill-agent-self-audit-asset-precipitation.md  skill-quick-code-change-explanation.md
(+59 files in other folders)
